# price-tracker

./: Cargo.toml
logger/: Cargo.toml
migrations/2020-12-03-225524_tracker_objects/: down.sql
migrations/2020-12-04-235315_vendor_properties/: down.sql
migrations/2020-12-05-003318_update_money/: down.sql
price-db/: .env  Cargo.toml
price-db/migrations/2020-12-03-225524_tracker_objects/: up.sql
price-db/src/: lib.rs  models.rs  utilities.rs
price-scraper/: .env  Cargo.toml  README.md
price-scraper/migrations/2020-12-04-235315_vendor_properties/: up.sql
price-scraper/migrations/2020-12-05-003318_update_money/: up.sql
price-scraper/src/: main.rs  price_finder.rs  utilities.rs
price-tracker/: Cargo.toml
price-tracker/src/: main.rs
src/: database.rs  log.rs  main.rs  models.rs  price_finder.rs  schema.rs  utilities.rs
