[package]
name = "price-db"
version = "0.1.0"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono", "numeric"] }
bigdecimal = "0.1.2"
dotenv = "0.15.0"
chrono = "0.4.19"
logger = { path = "../logger" }
