[package]
name = "price-scraper"
version = "0.1.0"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
scraper = "0.12.0"
select = "0.5.0"
async-trait = "0.1.42"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"
price-db = { path = "../price-db" }